--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,6 @@ workflows:
     jobs:
       - build
       - test:
-          - requires: build
+          requires: build
       - analyze:
-          - requires: test
+          requires: test
