--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.1
-
 jobs:
   build:
     docker:
-      - image: cimg/base:stable
+      #- image: cimg/base:stable
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run: npm i
@@ -11,7 +11,7 @@ jobs:
           
   test:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run: npm i
@@ -19,7 +19,7 @@ jobs:
 
   analyze:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run: npm audit
